--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ dj-database-url==3.1.0
 django==6.0.1
 djangorestframework==3.16.1
 dotenv==0.9.9
+gunicorn==24.1.1
+packaging==26.0
 psycopg==3.3.2
 python-dotenv==1.2.1
 ruff==0.14.14
