--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 asgiref==3.11.0
+attrs==25.4.0
+autobahn==25.12.2
+automat==25.4.16
+cbor2==5.8.0
 cffi==2.0.0
+channels==4.3.2
+channels-redis==4.3.0
+constantly==23.10.4
 cryptography==46.0.3
+daphne==4.2.1
 dj-database-url==3.1.0
 django==6.0.1
 django-cors-headers==4.9.0
@@ -8,12 +16,26 @@ djangorestframework==3.16.1
 djangorestframework-simplejwt==5.5.1
 dotenv==0.9.9
 gunicorn==24.1.1
+hyperlink==21.0.0
+idna==3.11
+incremental==24.11.0
+msgpack==1.1.2
 packaging==26.0
 psycopg==3.3.2
+py-ubjson==0.16.1
+pyasn1==0.6.2
+pyasn1-modules==0.4.2
 pycparser==3.0
 pyjwt==2.10.1
+pyopenssl==25.3.0
 python-dotenv==1.2.1
+redis==7.1.0
 ruff==0.14.14
+service-identity==24.2.0
 sqlparse==0.5.5
+twisted==25.5.0
+txaio==25.12.2
 typing-extensions==4.15.0
+ujson==5.11.0
 whitenoise==6.11.0
+zope-interface==8.2
